RP-994 Remove CNC Indicator checks from Release Issues Report